--- a/pathvector/base.yml
+++ b/pathvector/base.yml
@@ -2,6 +2,7 @@ web-ui-file: /var/www/html/pathvector/index.html
 origin-communities: ["398057:0:100"]
 asn: 398057
 irr-server: whois.radb.net
+default-route: false
 
 # BGP Communities may be found in `AS398057` aut-num
 templates:
@@ -42,7 +43,10 @@ templates:
     local-pref: 100
     filter-irr: false
     filter-transit-asns: true
-    remove-private-asns: true
+    remove-private-asns: false
+    mp-unicast-46: true
+    enforce-peer-nexthop: false
+    enforce-first-as: false
     prepend-path: [398057]
     announce: ["398057:0:100", "398057:0:110", "398057:0:120"]
     add-on-import: ["398057:0:190"]
