--- a/router-config/pathvector/router/rtr005.yml
+++ b/router-config/pathvector/router/rtr005.yml
@@ -9,3 +9,7 @@ prefixes:
   - 2a12:dd47:9010::/45
   - 2a12:dd47:9010::/48
   - 2a12:dd47:9013::/48
+
+kernel:
+  statics:
+    "2a07:54c2:b00b::/48": "2a12:dd47:9000::1"
