scripts and data

--- a/birdgen/conf/templates/actions.conf
+++ b/birdgen/conf/templates/actions.conf
@@ -121,3 +121,14 @@ function reject_rpki_invalid() {
     if (roa_check(rpki6, net, bgp_path.last_nonaggregated) = ROA_INVALID) then reject_route("RPKI invalid");
   }
 }
+
+
+function reject_bogon_routes() {
+  if (net.type = NET_IP4) then {
+    if (net ~ BOGONS_v4) then reject_route("bogon route");
+  }
+
+  if (net.type = NET_IP6) then {
+    if (net ~ BOGONS_v6) then reject_route("bogon route");
+  }
+}
