--- a/birdgen/conf/templates/blackhole.conf
+++ b/birdgen/conf/templates/blackhole.conf
@@ -20,7 +20,7 @@ function set_blackhole() {
 }
 
 function process_blackholes() {
-  if (((ASN,1,666) ~ bgp_large_community) && ((net.type = NET_IP4 && net.len = 32) || (net.type = NET_IP6 && net.len = 128))) then {
+  if (((OWNAS,1,666) ~ bgp_large_community) && ((net.type = NET_IP4 && net.len = 32) || (net.type = NET_IP6 && net.len = 128))) then {
     set_blackhole();
   }
 }
