--- a/birdgen/conf/templates/actions.conf
+++ b/birdgen/conf/templates/actions.conf
@@ -98,7 +98,7 @@ function reject_out_of_bounds_routes() {
 }
 
 function reject_transit_paths() {
-  if (bgp_path ~ TRANSIT_ASNS) then reject_route("transit in path");
+  if (bgp_path ~ TRANSIT_ASNS) then reject;
 }
 
 function honor_graceful_shutdown() {
@@ -106,7 +106,8 @@ function honor_graceful_shutdown() {
 }
 
 function reject_bogon_asns() {
-  if (bgp_path ~ BOGON_ASNS) then reject_route("bogon ASN in path");
+  # if (bgp_path.first ~ BOGON_ASNS) then reject_route("bogon ASN in path");
+  if !(bgp_path ~ [0..64511, 65535..4200000000]) then reject_route("path is only bogon ASNs");
 }
 
 function reject_long_as_paths() {
